<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="date">Date:</string>
    <string name="average_temperature">Average temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="description">Description:</string>
    <string name="city_name">City name</string>
    <string name="search">Search</string>
    <string name="rooted_warning">"You're using Rooted device"</string>
    <string name="clear_text_icon">Clear text icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>